--- a/project-backend/.env.example
+++ b/project-backend/.env.example
@@ -1,5 +1,5 @@
-DATASOURCE_JNDI=java:/AppDS
-DATASOURCE_NAME=AppDS
+DATASOURCE_JNDI=java:/ProjectDS
+DATASOURCE_NAME=ProjectDS
 DB_USER=postgres
 DB_PASS=dbsecret
 DB_HOST=db
