--- a/project-backend/src/main/webapp/WEB-INF/web.xml
+++ b/project-backend/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,16 @@
             <url-pattern>/api/users</url-pattern>
             <http-method>GET</http-method>
         </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Users Create</web-resource-name>
+            <url-pattern>/api/users</url-pattern>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Users Update</web-resource-name>
+            <url-pattern>/api/users/{id}</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
         <auth-constraint>
             <role-name>Administrador</role-name>
         </auth-constraint>
