--- a/project-backend/src/main/webapp/WEB-INF/web.xml
+++ b/project-backend/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,69 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <context-param>
+        <param-name>resteasy.role.based.security</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Dados Biomedicos List</web-resource-name>
+            <url-pattern>/api/dadosBiomedicos</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Dados Biomedicos Detail</web-resource-name>
+            <url-pattern>/api/dadosBiomedicos/{nome}</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Dados Biomedicos Create</web-resource-name>
+            <url-pattern>/api/dadosBiomedicos</url-pattern>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Dados Biomedicos Update</web-resource-name>
+            <url-pattern>/api/dadosBiomedicos/{nome}/update</url-pattern>
+            <http-method>PUT</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Dados Biomedicos Delete</web-resource-name>
+            <url-pattern>/api/dadosBiomedicos/{nome}</url-pattern>
+            <http-method>DELETE</http-method>
+        </web-resource-collection>
+
+
+        <web-resource-collection>
+            <web-resource-name>Users List</web-resource-name>
+            <url-pattern>/api/users</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Users Create</web-resource-name>
+            <url-pattern>/api/users</url-pattern>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>Users Update</web-resource-name>
+            <url-pattern>/api/users/{id}</url-pattern>
+            <http-method>GET</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>Administrador</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-role>
+        <role-name>Administrador</role-name>
+    </security-role>
+    <security-role>
+        <role-name>Doente</role-name>
+    </security-role>
+    <security-role>
+        <role-name>ProfissionalDeSaude</role-name>
+    </security-role>
+
+
     <login-config>
         <auth-method>BEARER_TOKEN</auth-method>
         <realm-name>jwt-realm</realm-name>
