--- a/project-backend/src/main/webapp/WEB-INF/web.xml
+++ b/project-backend/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,9 @@
             <http-method>PUT</http-method>
             <http-method>DELETE</http-method>
         </web-resource-collection>
+    </security-constraint>
 
- 
-
-  <security-constraint>
+    <security-constraint>
         <web-resource-collection>
             <web-resource-name>Prescricoes</web-resource-name>
             <url-pattern>/api/prescricoes/*</url-pattern>
@@ -99,7 +98,6 @@
         </auth-constraint>
     </security-constraint>
 
-
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Doentes Post and Delete</web-resource-name>
@@ -112,7 +110,6 @@
             <role-name>ProfissionalDeSaude</role-name>
         </auth-constraint>
     </security-constraint>
-
 
     <security-role>
         <role-name>Administrador</role-name>
