Prescricao updated with profissionalSaude and webxml and some middleware

--- a/project-backend/src/main/webapp/WEB-INF/web.xml
+++ b/project-backend/src/main/webapp/WEB-INF/web.xml
@@ -23,13 +23,25 @@
         <web-resource-collection>
             <web-resource-name>Prescricoes</web-resource-name>
             <url-pattern>/api/prescricoes/*</url-pattern>
-            <http-method>POST</http-method>
+
             <http-method>PUT</http-method>
             <http-method>DELETE</http-method>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>Administrador</role-name>
-             <role-name>Doente</role-name>
+
+            <role-name>ProfissionalDeSaude</role-name>
+        </auth-constraint>
+    </security-constraint>
+
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Prescricoes</web-resource-name>
+            <url-pattern>/api/prescricoes/</url-pattern>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+
+            <role-name>ProfissionalDeSaude</role-name>
         </auth-constraint>
     </security-constraint>
 
